@@ -1,12 +1,8 @@
 package seng202.team1.services;
 
-import javafx.scene.layout.AnchorPane;
-import seng202.team1.gui.FXWrapper;
-import seng202.team1.gui.controllers.NavigationController;
 import seng202.team1.models.User;
 import seng202.team1.models.Wine;
 import seng202.team1.repository.DAOs.ChallengeDAO;
-import seng202.team1.repository.DAOs.SearchDAO;
 
 import java.util.*;
 
@@ -16,22 +12,21 @@ import java.util.*;
  */
 public class ChallengeService {
 
-    private ArrayList<String> varities = new ArrayList<>(Arrays.asList("merlot", "pinot gris", "chardonnay", "red blend", "rose"));
-    private ArrayList<String> years = new ArrayList<>(Arrays.asList("1989", "1990", "2000", "2010", "2005"));
-    private ArrayList<String> reds = new ArrayList<>(Arrays.asList("red", "red", "red", "red", "red"));
-    private ArrayList<String> whites = new ArrayList<>(Arrays.asList("whites", "whites", "whites", "whites", "whites"));
-    private ArrayList<String> rose = new ArrayList<>(Arrays.asList("rose", "rose", "rose", "rose", "rose"));
+    private final ArrayList<String> varieties = new ArrayList<>(Arrays.asList("merlot", "pinot gris", "chardonnay", "red blend", "rose"));
+    private final ArrayList<String> years = new ArrayList<>(Arrays.asList("1989", "1990", "2000", "2010", "2005"));
+    private final ArrayList<String> reds = new ArrayList<>(Arrays.asList("red", "red", "red", "red", "red"));
+    private final ArrayList<String> whites = new ArrayList<>(Arrays.asList("whites", "whites", "whites", "whites", "whites"));
+    private final ArrayList<String> rose = new ArrayList<>(Arrays.asList("rose", "rose", "rose", "rose", "rose"));
 
-    private final ChallengeDAO chalDao = new ChallengeDAO();
-
+    private final ChallengeDAO challengeDAO = new ChallengeDAO();
 
     /**
      * Calls the challengeDAO to update the database so that the user has the variety challenge as an active challenge.
      */
     public void startChallengeVariety()
     {
-        ArrayList<Integer> wineids = getWinesforChallenge(varities, "tags");
-        chalDao.userActivatesChallenge(User.getCurrentUser().getId(), "Variety Challenge", wineids);
+        ArrayList<Integer> wineIDs = getWinesForChallenge(varieties, "tags");
+        challengeDAO.userActivatesChallenge(User.getCurrentUser().getId(), "Variety Challenge", wineIDs);
     }
 
     /**
@@ -39,17 +34,17 @@ public class ChallengeService {
      */
     public void startChallengeYears()
     {
-        ArrayList<Integer> wineids = getWinesforChallenge(years, "tags");
-        chalDao.userActivatesChallenge(User.getCurrentUser().getId(), "Time Travelling Challenge", wineids);
+        ArrayList<Integer> wineIDs = getWinesForChallenge(years, "tags");
+        challengeDAO.userActivatesChallenge(User.getCurrentUser().getId(), "Time Travelling Challenge", wineIDs);
     }
 
     /**
-     * calls the challengeDAO to make red challenge an active challege, sets the name.
+     * calls the challengeDAO to make red challenge an active challenge, sets the name.
      */
     public void startChallengeReds()
     {
-        ArrayList<Integer> wineids = getWinesforChallenge(reds, "name");
-        chalDao.userActivatesChallenge(User.getCurrentUser().getId(), "Red Roulette Challenge", wineids);
+        ArrayList<Integer> wineids = getWinesForChallenge(reds, "name");
+        challengeDAO.userActivatesChallenge(User.getCurrentUser().getId(), "Red Roulette Challenge", wineids);
     }
 
     /**
@@ -58,18 +53,18 @@ public class ChallengeService {
 
     public void startChallengeWhites()
     {
-        ArrayList<Integer> wineids = getWinesforChallenge(whites, "name");
-        chalDao.userActivatesChallenge(User.getCurrentUser().getId(), "Great White Challenge", wineids);
+        ArrayList<Integer> wineids = getWinesForChallenge(whites, "name");
+        challengeDAO.userActivatesChallenge(User.getCurrentUser().getId(), "Great White Challenge", wineids);
     }
 
     /**
-     * calls the challengeDAO to make rose challenge an active challege, sets the name.
+     * calls the challengeDAO to make rose challenge an active challenge, sets the name.
      */
 
     public void startChallengeRose()
     {
-        ArrayList<Integer> wineids = getWinesforChallenge(rose, "name");
-        chalDao.userActivatesChallenge(User.getCurrentUser().getId(), "Rose challenge", wineids);
+        ArrayList<Integer> wineIDs = getWinesForChallenge(rose, "name");
+        challengeDAO.userActivatesChallenge(User.getCurrentUser().getId(), "Rose challenge", wineIDs);
     }
 
     /**
@@ -78,34 +73,37 @@ public class ChallengeService {
      */
     public void challengeCompleted(String cname)
     {
-        chalDao.challengeCompleted(User.getCurrentUser().getId(), cname);
+        challengeDAO.challengeCompleted(User.getCurrentUser().getId(), cname);
     }
 
     /**
      * chose 5 random wines of the set type and returns there ids in an array list.
      * @param types is an array list of strings that are the type of wines for the challenge.
-     * @param searchtype is a string of either tags or name, which determines weather to user search service search in name or search in tags method.
+     * @param searchType is a string of either tags or name, which determines weather to user search service search in name or search in tags method.
      * @return ArrayList<Integer> list of wine ids </Integer>
      */
-    public ArrayList<Integer> getWinesforChallenge(ArrayList<String> types, String searchtype)
+    public ArrayList<Integer> getWinesForChallenge(ArrayList<String> types, String searchType)
     {
         ArrayList<Integer> wines = new ArrayList<>();
-        if (searchtype == "name") {
-            SearchWineService.getInstance().searchWinesByName(types.get(0), 100);
+        if (searchType.equals("name")) {
+            System.out.println(types.getFirst());
+            SearchWineService.getInstance().searchWinesByName(types.getFirst(), 100);
         }
-        for (int i = 0; i < types.size(); i ++) {
+        for (String type : types) {
             int wine = 0;
             boolean wineInvalid = true;
-            if (searchtype == "tags") {
-                SearchWineService.getInstance().searchWinesByTags(types.get(i), 100);
+            if (searchType.equals("tags")) {
+                SearchWineService.getInstance().searchWinesByTags(type, 100);
             }
             while (wineInvalid) {
                 Random random = new Random();
+                System.out.println(SearchWineService.getInstance().getWineList().size());
                 wine = SearchWineService.getInstance().getWineList().get(random.nextInt(SearchWineService.getInstance().getWineList().size())).getWineId();
                 boolean winefound = false;
-                for (int l = 0; l < wines.size(); l++) {
-                    if (wine == wines.get(l)) {
+                for (Integer integer : wines) {
+                    if (wine == integer) {
                         winefound = true;
+                        break;
                     }
                 }
                 if (!winefound) {
@@ -113,7 +111,7 @@ public class ChallengeService {
                 }
             }
             wines.add(wine);
-            }
+        }
         return wines;
     }
 
@@ -124,10 +122,7 @@ public class ChallengeService {
      * @return true if the user has the variety challenge.
      */
     public boolean activeChallenge() {
-        if (chalDao.getChallengeForUser(User.getCurrentUser().getId()) != null) {
-            return true;
-        }
-        return false;
+        return challengeDAO.getChallengeForUser(User.getCurrentUser().getId()) != null;
     }
 
     /**
@@ -135,7 +130,7 @@ public class ChallengeService {
      * @return arraylist of the wines for the challenge the user is participating in.
      */
     public ArrayList<Wine> challengeWines() {
-        return chalDao.getWinesForChallenge(chalDao.getChallengeForUser(User.getCurrentUser().getId()), User.getCurrentUser().getId());
+        return challengeDAO.getWinesInChallenge(challengeDAO.getChallengeForUser(User.getCurrentUser().getId()), User.getCurrentUser().getId());
     }
 
     /**
@@ -143,14 +138,6 @@ public class ChallengeService {
      * @return string name of users active challenge.
      */
     public String usersChallenge() {
-        return chalDao.getChallengeForUser(User.getCurrentUser().getId());
+        return challengeDAO.getChallengeForUser(User.getCurrentUser().getId());
     }
-
-
 }
-
-
-
-
-
-
